hphp/test/zend/good/Zend/tests/constant_expressions_self_referencing_array.php.expectf

Fatal error: Cannot declare self-referencing constant 'A::FOO' in %s/constant_expressions_self_referencing_array.php on line 4
